# DMS

./: .dockerignore  .gitignore  Cargo.toml  DATABASE_SETUP.md  MODELS.md  docker-compose.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.svelte  app.css
frontend/src/components/: Header.svelte  Login.svelte  MainContent.svelte  PropertiesPanel.svelte  Sidebar.svelte
frontend/src/services/: api.js
migrations/: 01_init.sql  02_audit_logs.sql  README.md
src/: audit.rs  auth.rs  dtos.rs  error.rs  main.rs  models.rs  openapi.rs  state.rs
src/routes/: audit.rs  documents.rs  folders.rs  login.rs  mod.rs  tags.rs  upload.rs
